--- a/khacsan/dangky.html
+++ b/khacsan/dangky.html
@@ -6,7 +6,7 @@
     <title>Đăng Ký Tài Khoản</title>
 </head>
 
-<link rel="stylesheet" href="../asset/css/dangky.css">
+<link rel="stylesheet" href="../khacsan/asset/css/dangky.css">
 <body>
     
     <header>
