--- a/khacsan/fac.html
+++ b/khacsan/fac.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>fac</title>
-    <link rel="stylesheet" href="../css/fac.css">
+    <link rel="stylesheet" href="../khacsan/asset/css/fac.css">
 </head>
 <body>
     <header>
