--- a/khacsan/Home.html
+++ b/khacsan/Home.html
@@ -1,4 +1,4 @@
-<<<<<<< HEAD
+<!-- <<<<<<< HEAD -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
 </head>
-<link rel="stylesheet" href="../css/Home.css">
+<link rel="stylesheet" href="../khacsan/asset/css/Home.css">
+
 <body>
     <header>
         <div class="menubar">
