--- a/khacsan/quenmatkhau.html
+++ b/khacsan/quenmatkhau.html
@@ -1,4 +1,4 @@
-<<<<<<< HEAD
+<!-- <<<<<<< HEAD -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>quenmatkhau</title>
 </head>
-<link rel="stylesheet" href="../css/quenmatkhau.css">
+<link rel="stylesheet" href="../khacsan/asset/css/quenmatkhau.css">
 <body>
     <header>
         <div class="menubar">
