--- a/khacsan/dangky.html
+++ b/khacsan/dangky.html
@@ -93,6 +93,6 @@
         </div>
     </div>
 
-    <script src="../asset/js/dangky.js"></script>
+    <script src="../khacsan/asset/js/dangky.js"></script>
 </body>
 </html>
