--- a/khacsan/dangnhap.html
+++ b/khacsan/dangnhap.html
@@ -86,6 +86,6 @@
             </div>
         </div>
     </div>
-    <script src="../asset/js/dangnhap.js"></script>
+    <script src="../khacsan/asset/js/dangnhap.js"></script>
 </body>
 </html>
