--- a/khacsan/dangky.html
+++ b/khacsan/dangky.html
@@ -17,7 +17,7 @@
             <p>h o t e l s</p>
         </div>
         <div class="tittle">
-            <h1>ĐĂNG KÝ</h1>
+            <h1>Đăng Ký</h1>
         </div>
         <div class="menu">
             <a href="./Home.html">Home</a>
