--- a/khacsan/dangnhap.html
+++ b/khacsan/dangnhap.html
@@ -14,7 +14,7 @@
                 <p>h o t e l s</p>
             </div>
             <div class="tittle">
-                <h1>ĐĂNG NHẬP</h1>
+                <h1>Đăng Nhập</h1>
             </div>
             <div class="menu">
                 <a href="./Home.html">Home</a>
