--- a/khacsan/quenmatkhau.html
+++ b/khacsan/quenmatkhau.html
@@ -16,7 +16,7 @@
             <p>h o t e l s</p>
         </div>
         <div class="tittle">
-            <h1>ĐĂNG NHẬP</h1>
+            <h1>Quên Mật Khẩu</h1>
         </div>
         <div class="menu">
             <a href="./Home.html">Home</a>
